examples/test/testpolicy11233.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11233
  namespace: namespace282
spec:
  podSelector:
    matchLabels:
      key44: value40
      key6: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value1
          key12: value34
      podSelector:
        matchLabels:
          key39: value1
          key35: value5
